--- a/chat/style.css
+++ b/chat/style.css
@@ -1,222 +1,154 @@
-:root {
-  font-size: 62.5%;
-
-  --text-color: #e1e1e6;
-  --bg-color: #1a1924;
-  --msgYou-color: #07847e;
-  --msgFriend-color: #633bbc;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 * {
   margin: 0;
   padding: 0;
-  font: inherit;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-img,
-picture,
-svg,
-video {
-  display: block;
-  max-width: 100%;
-}
-
-body,
-input,
-input::placeholder,
-button,
-textarea {
-  color: var(--text-color);
-  font-size: 1.6rem;
-
-  font-family: 'Roboto', sans-serif; /* fonte geral */
-  -webkit-font-smoothing: antialiased; /* deixa o contorno da fonte mais suave */
+:root {
+  font-size: 62.5%;
+  /* 1rem = 1.0rem */
 }
 
 body {
-  background-color: var(--bg-color);
+  font-size: 1.6rem;
+  background-color: #1a1924;
+  color: #e1e1e6;
+  height: 100vh;
+  overflow: hidden;
+}
+
+body * {
+  font-family: 'Roboto', sans-serif;
+
+}
+
+#app {
+  padding: 2.4rem 3.2rem;
+
+  max-width: 880rem;
+  margin: auto;
+  width: 100vw;
   height: 100vh;
 
-  padding: clamp(2.4rem, 1.6rem + 2.5vw, 3.2rem) 0;
   display: grid;
-  grid-template-areas:
-    'header'
-    'wrapper-chat';
-  grid-template-rows: 7.4rem auto 7.4rem;
+  grid-template-rows: max-content 1fr max-content;
 }
 
-.wrapper-chat {
-  grid-area: wrapper-chat;
-}
-
-main {
-  overflow-y: auto;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-header,
-main,
-.wrapper-input {
-  width: min(84%, 88rem);
-  margin: 0 auto;
-}
-
-header {
-  grid-area: header;
-
+#top {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
-header .profile {
+#user-info {
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
 
-header .profile img {
+#user-info img {
   width: 4.8rem;
   height: 4.8rem;
-
+  object-fit: cover;
   border-radius: 50%;
 }
 
-header .profile h1 {
-  font-weight: 400;
-  line-height: 1.9rem;
-}
-
-header .profile p {
+#user-status .status {
   color: #00b37e;
+  display: flex;
+  align-items: baseline;
+  gap: .4rem;
   font-size: 1.2rem;
+}
+
+#user-status .status::before {
+  content: '';
+  width: .8rem;
+  height: .8rem;
+  display: block;
+  background-color: #00b37e;
+  border-radius: 50%;
+}
+
+#last-seen {
+  font-size: 1.0rem;
   line-height: 1.4rem;
-  font-weight: 400;
-
-  margin-top: 4px;
-
-  display: flex;
-  align-items: center;
-  gap: 4px;
+  margin-top: 2.6rem;
+  text-align: center;
+}
+#messages {
+  overflow-y: scroll;
+  padding-bottom:2.4rem;
 }
 
-header button {
-  width: 2rem;
-  height: 2rem;
-
-  transition: filter 300ms;
+#messages::-webkit-scrollbar {
+  display:none;
 }
-
-header button:hover {
-  filter: brightness(0.6);
-}
-
-.chat {
-  display: flex;
-  flex-direction: column;
+.messages {
+  margin-top: 3rem;
+  display: grid;
   gap: 3rem;
-}
-
-.chat {
   font-size: 1.2rem;
-  font-weight: 400;
   line-height: 1.4rem;
-
-  padding-bottom: 0.5rem;
-  padding-right: 0.5rem;
 }
 
-.chat > span {
-  align-self: center;
-}
-
-.message {
-  max-width: 50%;
-
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.message p {
+.message .body {
+  margin-top: 1rem;
+  background-color: #633bbc;
   padding: 1.4rem;
-
+  border-radius: .0rem .8rem .8rem .8rem;
   width: fit-content;
 }
 
-.friend p {
-  background-color: var(--msgFriend-color);
-  border-radius: 0 0.8rem 0.8rem 0.8rem;
+.message:not(.you) {
+  width: 60vw;
 }
 
-.you {
-  align-self: flex-end;
+.message.you {
+  margin-left: auto;
 }
 
-.you span {
-  align-self: flex-end;
+.message.you .top {
+  text-align: right;
 }
 
-.you p {
-  background-color: var(--msgYou-color);
-  border-radius: 0.8rem 0.8rem 0 0.8rem;
-  align-self: flex-end;
-
+.message.you .body {
+  background-color: #07847e;
+  border-radius: .8rem .8rem 0rem .8rem;
 }
 
-.wrapper-input:has(input:focus) {
-  outline: 2px solid #00b37e;
-}
-.wrapper-input {
-  margin-top: 2.4rem;
-  background-color: #282843;
-
-  height: 5.2rem;
-
-  padding: 1.4rem 2.4rem;
-  border-radius: 99.9rem;
-
+form {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  gap: 1rem;
-
+  background: #282843;
+  border-radius: 999rem;
+  padding: 1.4rem 2.4rem;
 }
 
-.wrapper-input input {
-  background-color: transparent;
+form input {
+  flex: 1;
   outline: none;
-  border: none;
+  color: #e1e1e6;
+}
+
+form:focus-within {
+  outline: .2rem solid white;
+}
+
+input::placeholder {
+  color: #e1e1e6;
   font-size: 1.2rem;
-  line-height: 1.406rem;
-  font-weight: 400;
-
-  width: 100%;
+  line-height: 1.4rem;
 }
 
-.wrapper-input input::placeholder {
-  font-size: 1.2rem;
-  line-height: 1.406rem;
-  font-weight: 400;
+form button i {
+  color: #e1e1e6;
+  font-size: 2.4rem;
 }
 
-::-webkit-scrollbar {
-  width: 0.5rem;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #282843;
-  border-radius: 1rem;
+input, button {
+  background-color: transparent;
+  border: 0;
 }
